Hei og hopp dette her. Nå en gang til

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Skvuppfestivalen</h1>
-Den nye nettsiden
+Den nye nettsiden. Hei og hopp dette her. NÅ en gang til
 </body>
 </html>
