Den nyeste nettsiden

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Skvuppfestivalen</h1>
-Den nye nettsiden. Hei og hopp dette her. NÅ en gang til
+En helt annen nettside skrives nå.
+
 </body>
 </html>
